# snake-ai

./: .gitignore  README.md  config.json  flake.nix  main.py  pyproject.toml  requirements.txt  shell.nix
ai/: agent.py  ai_game.py  model.py  trainer.py  wrapper.py
cli/: cli.py  command.py  command_list.py
cli/commands/: apple.py  clear.py  color.py  exit.py  grid_size.py  help.py  load.py  pause.py  save.py  speed.py  start.py  stop.py  threads.py  unpause.py
config/: config.py
game/: game.py  square.py  types.py
plotter/: plotter.py
utils/: flatten_game_state.py  hex_rgb_convert.py  thread_wrapper.py
