[tool.poetry]
name = "snake-ai"
version = "0.1.0"
description = "Snake AI with an CLI"
authors = ["Khenzii <khenzii.was.taken@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "ai" },
    { include = "cli" },
    { include = "config" },
    { include = "game" },
    { include = "plotter" },
    { include = "utils" },
]

[tool.poetry.scripts]
snake-ai = "main:main"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "0.4.6"
contourpy = "1.2.0"
cycler = "0.12.1"
filelock = "3.13.1"
fonttools = "4.50.0"
fsspec = "2024.3.1"
Jinja2 = "3.1.5"
kiwisolver = "1.4.5"
MarkupSafe = "2.1.5"
matplotlib = "3.8.3"
mpmath = "1.3.0"
networkx = "3.2.1"
numpy = "1.26.4"
packaging = "24.0"
pillow = "10.3.0"
pygame = "2.5.2"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
six = "1.16.0"
sympy = "1.12"
torch = "2.2.1"
typing_extensions = "4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
